[package]
name = "garage-pi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.9"
rppal = {version = "0.13.1", optional = true }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
local_ipaddress = "0.1.3"
anyhow = "1.0.58"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
uuid = { version = "1.1.2", features = ["v4"] }
serde = "1.0.138"

[profile.dev.package.sqlx-macros]
opt-level = 3

[features]
rpi =["dep:rppal"]
